# librify

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh
include/: AuthServer.h  LocalMusicManager.h  PlaybackManager.h  PlaylistManager.h  SpotifyManager.h  TrackListModel.h
qml/: EditPlaylistPopup.qml  EditTrackPopup.qml  Main.qml  PlaybackControlsBar.qml  SidebarPane.qml  SidebarSettings.qml  ToggleSwitch.qml  TrackListPane.qml  qml.qrc
src/: AuthServer.cpp  LocalMusicManager.cpp  PlaybackManager.cpp  PlaylistManager.cpp  SpotifyManager.cpp  TrackListModel.cpp  main.cpp
